keycloker/manifest/pgadmin-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-dep
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin-app
  template:
    metadata:
      labels:
        app: pgadmin-app
    spec:
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: data-pgadmin
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
          name: pgadmin-port
        volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
        resources:
          requests:
            memory: "265Mi"
            cpu: "250m"
          # limits:
          #   memory: "512Mi"
          #   cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-dep
  namespace: keycloak
spec:
  ports:
  - port: 80
    protocol: TCP
    name: pgadmin-port
  selector:
    app: pgadmin-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issure:  issuer-ca
spec:
  tls:
  - hosts:
    - pgadmin.home.local
    secretName: pgadmin-crt-secret
  ingressClassName: nginx
  rules:
  - host: pgadmin.home.local
    http:
      paths:
      - backend:
          service:
            name: pgadmin-dep
            port:
              number: 80
        path: /
        pathType: Prefix
